--- a/assets/defaults.scss
+++ b/assets/defaults.scss
@@ -1,97 +1,166 @@
-
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,300,600');
 
 html {
-    font-size: 62.5%; }
-  body {
-    font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.5em;
+    /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #222; 
+    color: #222;
     margin: 0;
-    background-color: #e5e5e5;
+    background-color: #fff;
+}
+
+p {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 // NAVIGATION
 $color_1: #f2f2f2;
 $color_2: black;
 $color_3: white;
+$primary: #0f5185;
+$secondary: #8abde1;
 $background-color_1: #333;
-$background-color_2: #ddd;
-$background-color_3: #04AA6D;
+$background-color_2: #fff;
 
 .topnav {
-    position: absolute;
+    padding: 25px 0 15px 0;
+    position: fixed;
     z-index: 1;
-	overflow: hidden;
-	background-color: $background-color_1;
+    overflow: hidden;
+    background-color: $background-color_2;
     width: -webkit-fill-available;
-	a {
-		float: left;
-		display: block;
-		color: $color_1;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-		font-size: 17px;
-		&:hover {
-			background-color: $background-color_2;
-			color: $color_2;
-		}
-	}
-	a.active {
-		background-color: $background-color_3;
-		color: $color_3;
-	}
-	.icon {
-		display: none;
-	}
-}
 
-@media screen and (max-width: 600px) {
-	.topnav {
-		a {
-			&:not(:first-child) {
-				display: none;
-			}
-		}
-		a.icon {
-			float: right;
-			display: block;
-		}
-	}
-	.topnav.responsive {
-        position: absolute;
-        z-index: 1;
-        width: -webkit-fill-available;
-		.icon {
-			position: absolute;
-			right: 0;
-			top: 0;
-		}
-		a {
-			float: none;
-			display: block;
-			text-align: left;
-		}
-	}
+    a {
+        float: left;
+        display: block;
+        color: $color_2;
+        text-align: center;
+        padding: 5px 16px;
+        margin-top: 3px;
+        text-decoration: none;
+        font-size: 17px;
+
+        &:hover {
+            color: $primary;
+            border-bottom: 5px solid $primary;
+        }
+    }
+
+    a.active {
+        color: $primary;
+        font-weight: bold;
+        border-bottom: 5px solid $primary;
+    }
+
+    .icon {
+        display: none;
+    }
+
+    .nuxt-logo {
+        height: 50px;
+        float: left;
+        margin-right: 30px;
+    }
 }
 
 .wrapper {
     background-color: #fff;
-	position: relative;
-	max-width: 1360px;
-	width: 100%;
-	box-sizing: border-box;
-	margin: 0 auto;
-	top: 55px;
-	&:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
+    position: relative;
+    max-width: 1360px;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 auto;
+    top: 105px;
+
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 }
+
+@media screen and (max-width: 600px) {
+    .topnav {
+        padding: 0;
+
+        a {
+            &:hover {
+                background-color: $primary;
+                color: $color_3;
+                border-bottom: none;
+            }
+
+            &:not(:first-child) {
+                display: none;
+            }
+        }
+
+        a.active {
+            background-color: $primary;
+            color: $color_3;
+            border-bottom: none;
+            float: none;
+            display: block;
+            text-align: left;
+            margin-top: 0px;
+            padding: 20px;
+        }
+
+        a.icon {
+            float: right;
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin-top: 15px;
+            color: $color_3;
+
+            &:hover {
+                color: $secondary;
+            }
+        }
+
+        .logo-container {
+            text-align: center;
+            margin-right: 15%;
+        }
+
+        .nuxt-logo {
+            position: absolute;
+            margin-top: 8px;
+        }
+    }
+
+    .topnav.responsive {
+        padding: 0;
+        position: absolute;
+        z-index: 1;
+        width: -webkit-fill-available;
+
+        a {
+            float: none;
+            display: block;
+            text-align: left;
+            margin-top: 0px;
+        }
+
+        a.icon {
+            margin-top: 10px;
+        }
+    }
+
+    .wrapper {
+        top: 85px
+    }
+}
+
 .container {
     padding: 0 10px;
 }
@@ -99,8 +168,95 @@ $background-color_3: #04AA6D;
 .container:after,
 .row:after,
 .u-cf {
-  content: "";
-  display: table;
-  clear: both; }
+    content: "";
+    display: table;
+    clear: both;
+}
 
-  
+.button,
+button,
+input[type="button"] {
+    display: inline-block;
+    height: 38px;
+    padding: 0 3rem;
+    color: #555;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.button:hover,
+button:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="button"]:focus {
+    color: #333;
+    border-color: #888;
+    outline: 0;
+}
+
+.button.button-primary,
+button.button-primary,
+input[type="button"].button-primary {
+    color: #FFF;
+    background-color: $primary;
+    border-color: $primary;
+}
+
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="button"].button-primary:focus {
+    color: #FFF;
+    background-color: $primary;
+    border-color: $primary;
+}
+
+a {
+    color: $primary;
+    text-decoration: none;
+}
+
+a:hover {
+    color: $color_2;
+}
+
+
+.pt-10 {
+    padding-top: 10px
+}
+
+
+@media (min-width: 550px) {
+    .col {
+        width: 100%;
+        float: left;
+        box-sizing: border-box;
+    }
+
+    .col.three {
+        width: 22%;
+    }
+
+    .col.six {
+        width: 48%;
+    }
+
+    .col.twelve {
+        width: 100%;
+        margin-left: 0;
+    }
+}
