--- a/assets/defaults.scss
+++ b/assets/defaults.scss
@@ -92,6 +92,7 @@ $background-color_2: #fff;
         padding: 0;
 
         a {
+            padding: 20px;
             &:hover {
                 background-color: $primary;
                 color: $color_3;
@@ -111,7 +112,6 @@ $background-color_2: #fff;
             display: block;
             text-align: left;
             margin-top: 0px;
-            padding: 20px;
         }
 
         a.icon {
@@ -120,8 +120,9 @@ $background-color_2: #fff;
             position: absolute;
             right: 0;
             top: 0;
-            margin-top: 15px;
+            // margin-top: 15px;
             color: $color_3;
+            background-color: transparent;
 
             &:hover {
                 color: $secondary;
@@ -153,7 +154,7 @@ $background-color_2: #fff;
         }
 
         a.icon {
-            margin-top: 10px;
+            // margin-top: 10px;
         }
     }
 
